--- a/CertManage2/CertManageR2.dproj
+++ b/CertManage2/CertManageR2.dproj
@@ -70,13 +70,12 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <Debugger_RunParams>/rip:&quot;10.0.2.15&quot;</Debugger_RunParams>
-        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\Common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Delphi-Mocks-master\Source;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CourseManager2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\VesselList;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\project\OpenSrc\lib\robstechcorner\rtti;E:\pjh\Dev\Lang\Delphi\NoGitHub\RecordUnit2\Common;E:\pjh\project\common\Forms\TFormAbout;E:\pjh\project\common\Forms\TFormAbout\Helper3delite;E:\pjh\Dev\Lang\Delphi\Common\Frame;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\OmniThreadLibrary;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\OmniThreadLibrary\src;E:\pjh\project\common\LKSLEventUnits;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\Common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Delphi-Mocks-master\Source;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CourseManager2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\VesselList;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\project\OpenSrc\lib\robstechcorner\rtti;E:\pjh\Dev\Lang\Delphi\NoGitHub\RecordUnit2\Common;E:\pjh\project\common\Forms\TFormAbout;E:\pjh\project\common\Forms\TFormAbout\Helper3delite;E:\pjh\Dev\Lang\Delphi\Common\Frame;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\OmniThreadLibrary;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\OmniThreadLibrary\src;E:\pjh\project\common\LKSLEventUnits;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\project\OpenSrc\lib\DelphiZXingQRCodeEx-master\Source;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=Certification ManageR;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <Debugger_HostApplication>C:\Program Files (x86)\Microsoft Office\Office14\OUTLOOK.EXE</Debugger_HostApplication>
-        <DCC_Define>USE_SCRYPT;USE_SYN_CRYPT;GAMANAGER;USE_REGCODE;USE_MORMOT_WS;$(DCC_Define)</DCC_Define>
+        <DCC_Define>USE_SCRYPT;USE_SYN_CRYPT;GAMANAGER;USE_REGCODE;USE_MORMOT_WS;USE_LOGUTIL;$(DCC_Define)</DCC_Define>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_ExeOutput>E:\pjh\Dev\Lang\Delphi\Project\GSManage\Bin\</DCC_ExeOutput>
@@ -133,10 +132,6 @@
         </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitFormUtil.pas"/>
         <DCCReference Include="..\FrmGSFileList2.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\OpenSrc\lib\DelphiZXingQRCodeEx-master\DelphiZXingQRCodeEx-master\Source\DelphiZXIngQRCode.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\OpenSrc\lib\DelphiZXingQRCodeEx-master\DelphiZXingQRCodeEx-master\Source\QR_URL.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\OpenSrc\lib\DelphiZXingQRCodeEx-master\DelphiZXingQRCodeEx-master\Source\QR_Win1251.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\OpenSrc\lib\DelphiZXingQRCodeEx-master\DelphiZXingQRCodeEx-master\Source\QRGraphics.pas"/>
         <DCCReference Include="..\TariffManager2\FrmEditTariff2.pas"/>
         <DCCReference Include="..\Common\UnitGSTariffRecord2.pas"/>
         <DCCReference Include="..\TariffManager2\fFrmEditTariffItem2.pas"/>
@@ -261,6 +256,7 @@
                     <Source Name="MainSource">CertManageR2.dpr</Source>
                 </Source>
                 <Excluded_Packages>
+                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
