--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -70,7 +70,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CertManage2;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\Project\MacroManage;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\project\util\MacroManagement;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CertManage2;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\Project\MacroManage;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\project\util\MacroManagement;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\ArrayHelper-master;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_Define>USE_REGCODE;USE_SCRYPT;GAMANAGER;USE_SYN_CRYPT;USE_MORMOT_WS;$(DCC_Define)</DCC_Define>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -98,19 +98,15 @@
             <Form>DisplayTaskF</Form>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmDisplayTaskInfo.pas">
-            <Form>DisplayTaskInfoF</Form>
-        </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmFileSelect.pas">
             <Form>FileSelectF</Form>
         </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\common\FSMClass_Dic.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\common\FSMState.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmEditSubCon.pas">
+        <DCCReference Include="..\FrmEditSubCon2.pas">
             <Form>Form2</Form>
         </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitStringUtil.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\common\Unit\UnitIPCModule.pas"/>
         <DCCReference Include="..\Common\FrmTodo_Detail.pas">
             <Form>ToDoDetailF</Form>
         </DCCReference>
@@ -120,8 +116,6 @@
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitDateUtil.pas"/>
         <DCCReference Include="..\..\..\common\UnitTodoCollect2.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitRegistryUtil.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\RegCodeManager\UnitHttpModule4RegServer.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\RegCodeManager\Common\UnitRegCodeServerInterface.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\common\Frames\UnitNextGridFrame.pas">
             <Form>Frame1</Form>
             <FormType>dfm</FormType>
@@ -132,52 +126,17 @@
             <Form>ConfigF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\util\OutLookAddIn\OLMail4InqManage\OLMailWSCallbackInterface.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\RegCodeManager\FrmEditProduct.pas">
-            <Form>ProdEditF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\common\UnitBase64Util.pas"/>
         <DCCReference Include="..\Common\UnitAdvComponentUtil2.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\UnitGSTriffData.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\UnitGSTariffRecord.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\TariffManage\FrmEditTariff.pas">
-            <Form>TariffEditF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\TariffManage\fFrmEditTariffItem.pas">
-            <Form>EditTariffItemF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmSearchVessel.pas">
-            <Form>SearchVesselF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\TariffManage\FrmDisplayTariff.pas">
-            <Form>DisplayTariffF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\GAManageR\UnitGAServiceData.pas"/>
         <DCCReference Include="UnitHiconisASVarJsonUtil.pas"/>
-        <DCCReference Include="UnitHiconisASMakeReport.pas"/>
         <DCCReference Include="..\Common\UnitHiconisASWSInterface.pas"/>
         <DCCReference Include="..\UnitUserDataRecord2.pas"/>
-        <DCCReference Include="..\UnitHttpModule4InqManageServer2.pas"/>
+        <DCCReference Include="..\Common\UnitCmdExecService.pas"/>
         <DCCReference Include="..\Common\UnitMAPSMacro2.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\common\AsyncCallsHelper.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\common\AsyncCalls.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\common\JvgXMLSerializer_pjh.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\UnitStrategy4OLEmailInterface.pas"/>
+        <DCCReference Include="..\..\OutlookAddIn2\UnitStrategy4OLEmailInterface2.pas"/>
         <DCCReference Include="..\..\..\NoGitHub\RecordUnit2\HiconisASManager\UnitHiconisMasterRecord.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\GlobalAcademy\FrmGAEdit.pas">
-            <FormType>dfm</FormType>
-        </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitDFMUtil.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\common\Frames\FrameNextGridOnly.pas">
-            <Form>FrameNGOnly</Form>
-            <FormType>dfm</FormType>
-            <DesignClass>TFrame</DesignClass>
-        </DCCReference>
         <DCCReference Include="..\..\MacroManage\UnitMacroListClass2.pas"/>
         <DCCReference Include="..\VesselList\UnitVesselMasterRecord2.pas"/>
         <DCCReference Include="..\VesselList\UnitVesselData2.pas"/>
@@ -186,11 +145,6 @@
         <DCCReference Include="..\FrmEmailListView2.pas">
             <Form>EmailListViewF</Form>
             <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\common\Frames\FrameDragDropOutlook.pas">
-            <Form>DragOutlookFrame</Form>
-            <FormType>dfm</FormType>
-            <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="..\..\..\common\Frame\FrameOLEmailList2.pas">
             <Form>Frame2</Form>
@@ -210,6 +164,7 @@
             <Form>MacroManageF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\UnitGSTriffData.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -283,8 +238,7 @@
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhIOCompProPkg.bpl">(untitled)</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\12.0\Bpl\DelphiXE5_RestApi.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
