--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -70,7 +70,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CertManage2;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\Project\MacroManage;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\project\util\MacroManagement;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\ArrayHelper-master;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\project\OpenSrc\lib\delphistompclient-master;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\CertManage2;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\Project\MacroManage;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\project\util\MacroManagement;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\ArrayHelper-master;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\TStateMachine-master\source;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_Define>USE_REGCODE;USE_SCRYPT;GAMANAGER;USE_SYN_CRYPT;USE_MORMOT_WS;$(DCC_Define)</DCC_Define>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -101,8 +101,6 @@
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmFileSelect.pas">
             <Form>FileSelectF</Form>
         </DCCReference>
-        <DCCReference Include="..\..\..\..\..\..\project\common\FSMClass_Dic.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\common\FSMState.pas"/>
         <DCCReference Include="..\FrmEditSubCon2.pas">
             <Form>Form2</Form>
         </DCCReference>
@@ -127,7 +125,6 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\Common\UnitAdvComponentUtil2.pas"/>
-        <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\GAManageR\UnitGAServiceData.pas"/>
         <DCCReference Include="UnitHiconisASVarJsonUtil.pas"/>
         <DCCReference Include="..\Common\UnitHiconisASWSInterface.pas"/>
         <DCCReference Include="..\UnitUserDataRecord2.pas"/>
@@ -238,7 +235,8 @@
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\12.0\Bpl\DelphiXE5_RestApi.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhIOCompProPkg.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
