- ToDoList 기능 개선 - SubConEdit 컴파일

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -153,8 +153,8 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\OutlookAddIn2\UnitOLDataType.pas"/>
-        <DCCReference Include="..\FrmSelectProductType2.pas">
-            <Form>SelectProductTypeF</Form>
+        <DCCReference Include="..\..\..\common\Form\FrmSelectCheckBox.pas">
+            <Form>SelectChcekBoxF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\MacroManage\UnitMacroRecorderMain2.pas">
