--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -163,6 +163,15 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\..\Common\UnitOutlookUtil2.pas"/>
+        <DCCReference Include="..\..\RPA\Outlook\Util\UnitOLControlWorker.pas"/>
+        <DCCReference Include="..\..\..\Common\Frame\FrameOLEmailList4Ole.pas">
+            <Form>OutlookEmailListFr</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
+        </DCCReference>
+        <DCCReference Include="..\..\..\..\..\..\project\common\Forms\FrmStringsEdit.pas">
+            <FormType>dfm</FormType>
+        </DCCReference>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
