--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -70,7 +70,7 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\TStateMachine-master\source;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\delphistompclient-master;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2\common;E:\pjh\Dev\Lang\Delphi\Project\OutlookAddIn2;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\Project\MacroManage;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\project\util\MacroManagement;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Cromis\IPC;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Drag-and-Drop-Component-Suite-for-Delphi-master\DemosWithoutInstall\Outlook\MAPI;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\Util;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common\tlb;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\TStateMachine-master\source;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\delphistompclient-master;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Cromis\IPC;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Drag-and-Drop-Component-Suite-for-Delphi-master\DemosWithoutInstall\Outlook\MAPI;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\Util;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common\tlb;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\ArrayHelper-master;E:\pjh\Dev\Lang\Delphi\Project\RPA\MacroManage;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
         <DCC_Define>USE_REGCODE;USE_SCRYPT;GAMANAGER;USE_SYN_CRYPT;USE_CROMIS_IPC;$(DCC_Define)</DCC_Define>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -133,7 +133,6 @@
         <DCCReference Include="..\..\..\..\..\..\project\common\JvgXMLSerializer_pjh.pas"/>
         <DCCReference Include="..\..\..\NoGitHub\RecordUnit2\HiconisASManager\UnitHiconisMasterRecord.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\common\UnitDFMUtil.pas"/>
-        <DCCReference Include="..\..\MacroManage\UnitMacroListClass2.pas"/>
         <DCCReference Include="..\VesselList\UnitVesselMasterRecord2.pas"/>
         <DCCReference Include="..\VesselList\UnitVesselData2.pas"/>
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\VesselList\UnitEngineMasterData.pas"/>
@@ -146,18 +145,11 @@
             <Form>SelectChcekBoxF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\..\MacroManage\UnitMacroRecorderMain2.pas">
-            <Form>MacroManageF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\UnitGSTriffData.pas"/>
         <DCCReference Include="FrmASMaterialEdit.pas">
             <Form>ASMaterialF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\..\Outlook\UnitOLDataType.pas"/>
-        <DCCReference Include="..\..\Outlook\UnitStrategy4OLEmailInterface2.pas"/>
-        <DCCReference Include="..\..\Outlook\OLMailWSCallbackInterface2.pas"/>
         <DCCReference Include="..\..\RPA\Outlook\Util\FrmOLControl.pas">
             <Form>OLControlF</Form>
             <FormType>dfm</FormType>
@@ -170,6 +162,14 @@
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\common\Forms\FrmStringsEdit.pas">
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\..\..\..\..\..\project\util\MacroManagement\FrmSerialCommConfig.pas">
+            <Form>SerialCommConfigF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\..\..\..\..\..\project\util\MacroManagement\UnitNameEdit.pas">
+            <Form>NameEditF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <None Include="HiconisASManageR.todo"/>
@@ -245,8 +245,7 @@
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhIOCompProPkg.bpl">(untitled)</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\12.0\Bpl\DelphiXE5_RestApi.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
