- ToDoList 자료구조 변경 : IList - ToDoList 조회 화면 2nd Form 생성

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -172,6 +172,14 @@
             <Form>NameEditF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UnitHiASMaterialRecord.pas"/>
+        <DCCReference Include="UnitHiASSubConRecord.pas"/>
+        <DCCReference Include="UnitHiASToDoRecord.pas"/>
+        <DCCReference Include="..\..\..\Common\Form\FrmToDoList2.pas">
+            <Form>ToDoListF2</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="..\..\..\Common\UnitToDoList.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
@@ -245,7 +253,8 @@
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\12.0\Bpl\DelphiXE5_RestApi.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhIOCompProPkg.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
