- Define GAMANAGER 삭제 - Task 조회 시 Claim 관련 검색 항목 추가 - UnitCommonFormUtil.pas 추가 : CheckGroup에 Set Type 변수를 Parameter로 전달 가능

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -183,6 +183,7 @@
             <Form>HiconisAsManageF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="..\Common\UnitCommonFormUtil.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
