- IniPersist에 Typekind 속성 추가

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -186,6 +186,8 @@
         <DCCReference Include="..\Common\UnitCommonFormUtil.pas"/>
         <DCCReference Include="..\Common\UnitImportFromXls.pas"/>
         <DCCReference Include="UnitHiASMaterialCodeRecord.pas"/>
+        <DCCReference Include="..\..\..\Common\UnitIniAttriPersist.pas"/>
+        <DCCReference Include="UnitHiASIniConfig.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
