--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -185,6 +185,8 @@
         <DCCReference Include="..\..\..\Common\UnitIniAttriPersist.pas"/>
         <DCCReference Include="UnitHiASIniConfig.pas"/>
         <DCCReference Include="..\..\..\Common\UnitIPCMsgQUtil.pas"/>
+        <DCCReference Include="..\..\..\Common\UnitJsonUtil.pas"/>
+        <DCCReference Include="UnitHiASOLUtil.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
