- ImportHiconisProjectFromXls 함수 추가 - HullNo/ShipName 검색 버튼 추가 - IniConfig에 LogisticPIC 추가 - GetRecvEmailAddress 함수 수정 - MPM Duplicated ID 검출 함수 추가 - MPM Backup 기능 추가

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -187,6 +187,7 @@
         <DCCReference Include="..\..\..\Common\UnitIPCMsgQUtil.pas"/>
         <DCCReference Include="..\..\..\Common\UnitJsonUtil.pas"/>
         <DCCReference Include="UnitHiASOLUtil.pas"/>
+        <DCCReference Include="UnitHiASProjectRecord.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
