- Hicon Report Mgr 프로젝트 추가

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -188,6 +188,7 @@
         <DCCReference Include="..\..\..\Common\UnitJsonUtil.pas"/>
         <DCCReference Include="UnitHiASOLUtil.pas"/>
         <DCCReference Include="UnitHiASProjectRecord.pas"/>
+        <DCCReference Include="UnitHiconisDI16RecallRec.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
