- 클립보드 복사 또는 붙여넣기 추가 - SysInfo.ini Load/Save 추가 - InfluxDB retention 설정 추가

--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -189,6 +189,7 @@
         <DCCReference Include="UnitHiASOLUtil.pas"/>
         <DCCReference Include="UnitHiASProjectRecord.pas"/>
         <DCCReference Include="UnitHiconisDI16RecallRec.pas"/>
+        <DCCReference Include="..\..\..\Common\UnitAdvCompUtil.pas"/>
         <None Include="HiconisASManageR.todo"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
