--- a/ACONISSystemInfo2/ACONISSystemInfo2.dproj
+++ b/ACONISSystemInfo2/ACONISSystemInfo2.dproj
@@ -1,9 +1,9 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <ProjectGuid>{CF32D4E2-93AD-4FA6-A58B-03D9BF93CA1C}</ProjectGuid>
+        <ProjectGuid>{86F13385-BFD8-441C-B8FA-807B4B98BF1A}</ProjectGuid>
         <ProjectVersion>15.3</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
-        <MainSource>HiConTCP.dpr</MainSource>
+        <MainSource>ACONISSystemInfo2.dpr</MainSource>
         <Base>True</Base>
         <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
@@ -51,15 +51,15 @@
         <DCC_K>false</DCC_K>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
-        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <DCC_UsePackage>ggbar;JvGlobus;JvMM;JvManagedThreads;pjhTMSSmoothCompPkg;Spring.Data;FireDACPgDriver;NxCommonRun_dxe5;JvCrypt;tmswizdXE5;IndySystem190;DBXInterBaseDriver;DataSnapServer;DataSnapCommon;KiwoomOpenAPI;GLScene_RunTime;JvNet;JvDotNetCtrls;DbxCommonDriver;DDuce.Components;vclimg;dbxcds;DatasnapConnectorsFreePascal;IndyCore190;JvXPCtrls;sdlbasepack_rt_105X5;sdlmathpack_rt_105X5;ggbutton;vcldb;WebView4DelphiVCLRTL;NxGrid6Dsgn_dxe5;NxStandard6Dsgn_dxe5;DCP_XE5;CustomIPTransport;SynEdit_RXE5;dsnap;NxInspectorRun_dxe5;CloudService;NxStandard6Run_dxe5;FireDACIBDriver;JvDB;JvRuntimeDesign;DragDropDXE5;TelegramBotComp;OmniThreadLibraryRuntime;JclDeveloperTools;FireDACDb2Driver;pjhTMSCompPkg;adxolBuildD19;NxGridDsgn_dxe5;dacfmx190;bindcompfmx;vcldbx;IocompDelphiXE5;FireDACODBCDriver;pjhIOCompPlotPkg;zControls_R;dbrtl;FireDACCommon;bindcomp;inetdb;JvPluginSystem;sdlchartpack_rt_105X5;DBXOdbcDriver;LabelPack;JvCmp;vclFireDAC;adxBuildD19;JvTimeFramework;xmlrtl;NxSheetRun_dxe5;FireDACCommonDriver;pjhIOCompStdPkg;soaprtl;bindengine;vclactnband;HListBox_XE5;A1_pjhCommonUnit4ExtLib;bindcompvcl;Jcl;vclie;sdlguipack_rt_105X5;NxDBGrid6Run_dxe5;UtilPkg;ExtLib_D_DXE5;sdlguipack_105X5;odacvcl190;IcsCommonDXE5Run;OLSecManD19;DBXInformixDriver;FireDACMSSQLDriver;xIOComp;NxCollectionDsgn_dxe5;dsnapcon;DBXFirebirdDriver;inet;JvPascalInterpreter;FireDACMySQLDriver;BCHexEditor.Package.Runtime;vclx;DBXSybaseASADriver;RESTComponents;NxCollection6Run_dxe5;CEF4DelphiFMXRTL;dbexpress;JvBDE;tmsdXE5;FireDACSqliteDriver;ZComponent;DBXSqliteDriver;fmx;NxInspector6Dsgn_dxe5;JvDlgs;sdlmathpack_105X5;pjhxIOCompPkg;dacvcl190;inetdbbde;DataSnapClient;NxCommonDsgn_dxe5;DataSnapProviderClient;DBXSybaseASEDriver;DDuce.Modules;MetropolisUILiveTile;pkCindyPackDXE5;vcldsnap;fmxFireDAC;IcsVclDXE5Run;DBXDb2Driver;DBXOracleDriver;JvCore;vclribbon;fmxase;vcl;ComponentPackExRun;Python_D;DBXMSSQLDriver;CodeSiteExpressPkg;odac190;DataSnapFireDAC;FireDACDBXDriver;JvAppFrm;inetdbxpress;BCEditor.Delphi.XE5.Runtime;A2_pjhCompSharedPkg;JvDocking;adortl;DelphiModbusXE5;JvWizards;NxDBGrid6Dsgn_dxe5;FireDACASADriver;JvHMI;NxLayout6Run_dxe5;JvBands;NxDBGridRun_dxe5;ZDbc;rtl;DbxClientDriver;ZPlain;cepack;JclContainers;ChromeTabs_R;NxCollection6Dsgn_dxe5;JvSystem;svnui;JvControls;DBXMySQLDriver;NLDArrows70;DDuce.Core;tmsxlsdXE5;sdlchartpack_105X5;bindcompdbx;IndyProtocols190;JvJans;JvPrintPreview;JvPageComps;dd_PJComponents;JvStdCtrls;JvCustom;FireDACADSDriver;vcltouch;ZCore;PngComponents;dac190;NxGridRun_dxe5;NxDBGridDsgn_dxe5;VclSmp;FireDAC;VCLRESTComponents;CEF4DelphiVCLRTL;DataSnapConnectors;FireDACDataSnapDriver;NLDSideBar70;NxInspectorDsgn_dxe5;fmxobj;JclVcl;NLDXPSelection70;ZParseSql;svn;tmsexdXE5;fmxdae;NxGrid6Run_dxe5;FireDACOracleDriver;bdertl;NxCollectionRun_dxe5;VirtualTreesR;FireDACMSAccDriver;DataSnapIndy10ServerTransport;NxInspector6Run_dxe5;$(DCC_UsePackage)</DCC_UsePackage>
-        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
-        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <DCC_UsePackage>ggbar;JvBDE;JvGlobus;NxInspector6Run_dxe5;JvMM;tmsdXE5;JvManagedThreads;FireDACSqliteDriver;DBXSqliteDriver;FireDACPgDriver;fmx;NxInspector6Dsgn_dxe5;JvDlgs;IndySystem;JvCrypt;tmswizdXE5;NxCommonRun_dxe5;pjhxIOCompPkg;dacvcl190;inetdbbde;DBXInterBaseDriver;DataSnapClient;DataSnapCommon;DataSnapServer;NxCommonDsgn_dxe5;GLScene_RunTime;JvNet;DataSnapProviderClient;JvDotNetCtrls;DBXSybaseASEDriver;DbxCommonDriver;vclimg;Python_XE2;dbxcds;DatasnapConnectorsFreePascal;MetropolisUILiveTile;JvXPCtrls;pkCindyPackDXE5;vcldb;ggbutton;vcldsnap;NxGrid6Dsgn_dxe5;fmxFireDAC;NxStandard6Dsgn_dxe5;DBXDb2Driver;DCP_XE5;DBXOracleDriver;CustomIPTransport;JvCore;vclribbon;dsnap;IndyIPServer;NxInspectorRun_dxe5;fmxase;vcl;IndyCore;ComponentPackExRun;IndyIPCommon;CloudService;DBXMSSQLDriver;CodeSiteExpressPkg;FireDACIBDriver;odac190;NxStandard6Run_dxe5;DataSnapFireDAC;FireDACDBXDriver;JvAppFrm;JvDB;JvRuntimeDesign;DragDropDXE5;inetdbxpress;JclDeveloperTools;FireDACDb2Driver;A2_pjhCompSharedPkg;JvDocking;adortl;DelphiModbusXE5;JvWizards;adxolBuildD19;NxDBGrid6Dsgn_dxe5;NxGridDsgn_dxe5;FireDACASADriver;dacfmx190;JvHMI;bindcompfmx;NxLayout6Run_dxe5;JvBands;vcldbx;IocompDelphiXE5;FireDACODBCDriver;NxDBGridRun_dxe5;rtl;dbrtl;DbxClientDriver;FireDACCommon;bindcomp;inetdb;JvPluginSystem;cepack;JclContainers;DBXOdbcDriver;LabelPack;JvCmp;vclFireDAC;adxBuildD19;NxCollection6Dsgn_dxe5;JvSystem;xmlrtl;svnui;JvTimeFramework;NxSheetRun_dxe5;JvControls;IndyProtocols;DBXMySQLDriver;FireDACCommonDriver;tmsxlsdXE5;bindengine;vclactnband;soaprtl;bindcompdbx;A1_pjhCommonUnit4ExtLib;JvJans;bindcompvcl;JvStdCtrls;JvCustom;Jcl;vclie;JvPageComps;JvPrintPreview;NxDBGrid6Run_dxe5;FireDACADSDriver;vcltouch;pkCindyDBCtrlsPackDXE5;UtilPkg;ExtLib_D_DXE5;PngComponents;dac190;NxGridRun_dxe5;odacvcl190;VclSmp;FireDACMSSQLDriver;FireDAC;VCLRESTComponents;DBXInformixDriver;OLSecManD19;NxDBGridDsgn_dxe5;DataSnapConnectors;FireDACDataSnapDriver;NxCollectionDsgn_dxe5;xIOComp;NxInspectorDsgn_dxe5;dsnapcon;DBXFirebirdDriver;inet;fmxobj;JclVcl;JvPascalInterpreter;FireDACMySQLDriver;BCHexEditor.Package.Runtime;vclx;svn;DBXSybaseASADriver;tmsexdXE5;FireDACOracleDriver;fmxdae;RESTComponents;NxGrid6Run_dxe5;NxCollection6Run_dxe5;bdertl;NxCollectionRun_dxe5;FireDACMSAccDriver;DataSnapIndy10ServerTransport;dbexpress;IndyIPClient;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
-        <DCC_UsePackage>Spring.Data;FireDACPgDriver;NxCommonRun_dxe5;IndySystem190;DBXInterBaseDriver;DataSnapServer;DataSnapCommon;DbxCommonDriver;DDuce.Components;vclimg;dbxcds;DatasnapConnectorsFreePascal;IndyCore190;sdlbasepack_rt_105X5;sdlmathpack_rt_105X5;vcldb;WebView4DelphiVCLRTL;NxGrid6Dsgn_dxe5;NxStandard6Dsgn_dxe5;CustomIPTransport;SynEdit_RXE5;dsnap;NxInspectorRun_dxe5;CloudService;NxStandard6Run_dxe5;FireDACIBDriver;DragDropDXE5;OmniThreadLibraryRuntime;FireDACDb2Driver;adxolBuildD19;NxGridDsgn_dxe5;bindcompfmx;FireDACODBCDriver;zControls_R;dbrtl;FireDACCommon;bindcomp;inetdb;sdlchartpack_rt_105X5;DBXOdbcDriver;vclFireDAC;adxBuildD19;xmlrtl;NxSheetRun_dxe5;FireDACCommonDriver;soaprtl;bindengine;vclactnband;bindcompvcl;vclie;sdlguipack_rt_105X5;NxDBGrid6Run_dxe5;sdlguipack_105X5;IcsCommonDXE5Run;OLSecManD19;DBXInformixDriver;FireDACMSSQLDriver;NxCollectionDsgn_dxe5;dsnapcon;DBXFirebirdDriver;inet;FireDACMySQLDriver;vclx;DBXSybaseASADriver;RESTComponents;NxCollection6Run_dxe5;CEF4DelphiFMXRTL;dbexpress;tmsdXE5;FireDACSqliteDriver;ZComponent;DBXSqliteDriver;fmx;NxInspector6Dsgn_dxe5;sdlmathpack_105X5;DataSnapClient;NxCommonDsgn_dxe5;DataSnapProviderClient;DBXSybaseASEDriver;DDuce.Modules;MetropolisUILiveTile;vcldsnap;fmxFireDAC;IcsVclDXE5Run;DBXDb2Driver;DBXOracleDriver;vclribbon;fmxase;vcl;DBXMSSQLDriver;DataSnapFireDAC;FireDACDBXDriver;inetdbxpress;BCEditor.Delphi.XE5.Runtime;adortl;DelphiModbusXE5;FireDACASADriver;NxLayout6Run_dxe5;NxDBGridRun_dxe5;ZDbc;rtl;DbxClientDriver;ZPlain;NxCollection6Dsgn_dxe5;DBXMySQLDriver;DDuce.Core;tmsxlsdXE5;sdlchartpack_105X5;bindcompdbx;FireDACADSDriver;vcltouch;ZCore;PngComponents;NxGridRun_dxe5;NxDBGridDsgn_dxe5;VclSmp;FireDAC;VCLRESTComponents;CEF4DelphiVCLRTL;DataSnapConnectors;FireDACDataSnapDriver;NxInspectorDsgn_dxe5;fmxobj;ZParseSql;tmsexdXE5;fmxdae;NxGrid6Run_dxe5;FireDACOracleDriver;NxCollectionRun_dxe5;VirtualTreesR;FireDACMSAccDriver;DataSnapIndy10ServerTransport;NxInspector6Run_dxe5;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>NxInspector6Run_dxe5;tmsdXE5;FireDACSqliteDriver;DBXSqliteDriver;FireDACPgDriver;fmx;NxInspector6Dsgn_dxe5;IndySystem;NxCommonRun_dxe5;DBXInterBaseDriver;DataSnapClient;DataSnapCommon;DataSnapServer;NxCommonDsgn_dxe5;DataSnapProviderClient;DBXSybaseASEDriver;DbxCommonDriver;vclimg;dbxcds;DatasnapConnectorsFreePascal;MetropolisUILiveTile;vcldb;vcldsnap;NxGrid6Dsgn_dxe5;fmxFireDAC;NxStandard6Dsgn_dxe5;DBXDb2Driver;DBXOracleDriver;CustomIPTransport;vclribbon;dsnap;IndyIPServer;NxInspectorRun_dxe5;fmxase;vcl;IndyCore;IndyIPCommon;CloudService;DBXMSSQLDriver;FireDACIBDriver;NxStandard6Run_dxe5;DataSnapFireDAC;FireDACDBXDriver;DragDropDXE5;inetdbxpress;FireDACDb2Driver;adortl;DelphiModbusXE5;adxolBuildD19;NxGridDsgn_dxe5;FireDACASADriver;bindcompfmx;NxLayout6Run_dxe5;FireDACODBCDriver;NxDBGridRun_dxe5;rtl;dbrtl;DbxClientDriver;FireDACCommon;bindcomp;inetdb;DBXOdbcDriver;vclFireDAC;adxBuildD19;NxCollection6Dsgn_dxe5;xmlrtl;NxSheetRun_dxe5;IndyProtocols;DBXMySQLDriver;FireDACCommonDriver;tmsxlsdXE5;bindengine;vclactnband;soaprtl;bindcompdbx;bindcompvcl;vclie;NxDBGrid6Run_dxe5;FireDACADSDriver;vcltouch;PngComponents;NxGridRun_dxe5;VclSmp;FireDACMSSQLDriver;FireDAC;VCLRESTComponents;DBXInformixDriver;OLSecManD19;NxDBGridDsgn_dxe5;DataSnapConnectors;FireDACDataSnapDriver;NxCollectionDsgn_dxe5;NxInspectorDsgn_dxe5;dsnapcon;DBXFirebirdDriver;inet;fmxobj;FireDACMySQLDriver;vclx;DBXSybaseASADriver;tmsexdXE5;FireDACOracleDriver;fmxdae;RESTComponents;NxGrid6Run_dxe5;NxCollection6Run_dxe5;NxCollectionRun_dxe5;FireDACMSAccDriver;DataSnapIndy10ServerTransport;dbexpress;IndyIPClient;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
@@ -70,12 +70,11 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
-        <DCC_Define>DEF_CRYPT_ALL;$(DCC_Define)</DCC_Define>
-        <DCC_ExeOutput>.\</DCC_ExeOutput>
-        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\Common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\delphi-html-parser-main;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\melander;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\synapse-master;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\Common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <DCC_ExeOutput>..\bin</DCC_ExeOutput>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
-        <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
@@ -88,30 +87,23 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="FrmHiConTCP.pas">
-            <Form>HiconisTCPF</Form>
+        <DCCReference Include="FrmEASAlarm.pas">
+            <Form>SetACONISF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="FrmIpList.pas">
-            <Form>IPListF</Form>
+        <DCCReference Include="..\..\..\..\..\..\project\common\UnitIniFileUtil.pas"/>
+        <DCCReference Include="FrmSystemInfo.pas">
+            <Form>AconisSysInfoF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\..\..\..\Common\Form\FrmInputIpAddress.pas">
+        <DCCReference Include="..\..\..\Common\UnitTreeListUtil.pas"/>
+        <DCCReference Include="..\..\..\Common\Frame\FrameIniTreeList.pas">
+            <Form>IniTreeListFr</Form>
             <FormType>dfm</FormType>
+            <DesignClass>TFrame</DesignClass>
         </DCCReference>
-        <DCCReference Include="UnitChkDupIdData.pas"/>
-        <DCCReference Include="..\..\..\..\Common\UnitTRegExUtil.pas"/>
-        <DCCReference Include="..\..\..\..\Common\UnitHtmlUtil.pas"/>
-        <DCCReference Include="UnitHiConTCPWorker.pas"/>
-        <DCCReference Include="..\..\..\..\NoGitHub\Util\UnitCryptUtil3.pas"/>
-        <DCCReference Include="..\UnitHiconSystemDBUtil.pas"/>
-        <DCCReference Include="..\..\..\..\Common\Dom\UnitAnimationThread.pas"/>
-        <DCCReference Include="..\..\..\..\Common\Form\FrmElapsedTime.pas">
-            <Form>ElapsedTimeF</Form>
-            <FormType>dfm</FormType>
-        </DCCReference>
-        <DCCReference Include="UnitHiConInfluxDBUtil.pas"/>
-        <DCCReference Include="..\..\..\..\Common\Form\FrmTwoInputEdit.pas">
+        <DCCReference Include="..\..\..\..\..\..\project\common\Forms\FrmInputEdit.pas">
+            <Form>InputEditF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
@@ -182,7 +174,7 @@
                     <VersionInfoKeys Name="theme"/>
                 </VersionInfoKeys>
                 <Source>
-                    <Source Name="MainSource">HiConTCP.dpr</Source>
+                    <Source Name="MainSource">ACONISSystemInfo2.dpr</Source>
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
